Add get all stations endpoint (#60)
* Add get all stations endpoint to swagger

* Implement new endpoint + bugfixes

* Update API

* Use namespace, slug instead of country_code, id

* Fix test...

+ allow to run specific test in tox

* Update README

* Update health check path
